<resources>
    <string name="app_name">Fatti Mandare</string>
    <string name="hello">Hello World!</string>
    <string name="title">Titolo</string>
    <string name="subtitle">Sottotitolo</string>
    <string name="loreIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non leo in quam fermentum malesuada. Vestibulum faucibus quis orci ut scelerisque. Integer eget neque eget sapien rutrum efficitur. Fusce molestie viverra neque ut malesuada. Suspendisse massa leo, feugiat vitae efficitur eget, tincidunt lobortis odio. Morbi pharetra turpis sed lectus laoreet.</string>
    <string name="read">Leggi</string>
    <string name="date">08/02/2016</string>
    <string name="fuck">Fatti mandare</string>
    <string name="smettila">Smettila, trimone!</string>
    <string name="gia_mandato">Sei già stato mandato!</string>
    <string name="name">Antonio Cozzi</string>
    <string name="telephone_num">3278546521</string>
    <string name="position">Via Sandro Sandri 71</string>
    <string name="go_via_maps">go</string>
    <string name="call_phone">call</string>
    <string name="email">antoniocozzi@elis.it</string>
    <string name="send">send</string>
</resources>
