<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:padding="14dp"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtitle"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:textColor="@color/colorAccent"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <ScrollView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

            <TextView
                android:id="@+id/loremIpsum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loreIpsum"
                android:textColor="@color/colorPrimary"/>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <Button
                android:id="@+id/read"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/read"
                android:shadowColor="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fuck"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/change"/>
</LinearLayout>